# cg-raytracer

./: .gitignore  CMakeLists.txt  COMS30115-raytracer.vcxproj  COMS30115-raytracer.vcxproj.filters  Makefile  README
Resources/: colours.mtl  mirror.mtl  red.mtl  textured.mtl
Source/: Face.cpp  Face.h  Material.cpp  Material.h  Model.cpp  Model.h  Primitive.cpp  Primitive.h  README.md  SDLauxiliary.cpp  SDLauxiliary.h  Scene.cpp  Scene.h  Sphere.cpp  Sphere.h  TestModel.cpp  TestModel.h  Triangle.cpp  Triangle.h  main_raytracer.cpp  raytracer.cpp  raytracer.h
src/: Material.h  Model.h  Scene.h  Sphere.cpp  Triangle.h  raytracer.cpp
